[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "jupyter>=1.1.1",
    "line-profiler>=5.0.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.5.42",
    "mkdocs>=1.6.1",
    "pre-commit>=4.0.1",
    "pyright>=1.1.403",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "ruff>=0.12.9",
    "ssort>=0.13.0",
    "toml-sort>=0.23.1",
]

[project]
authors = [{ email = "marvin.vanaalst@gmail.com", name = "Marvin van Aalst" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "dill>=0.3.9",
    "kiwisolver>=1.5",           # only to get 3.14 build to work
    "latexify-py>=0.4.4",
    "lazy-import>=0.2.2",
    "loky>=3.4",
    "matplotlib>=3.9.2",
    "mike>=2.1.3",
    "more-itertools>=10.5.0",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "parameteriser>=0.1.0",
    "pillow>=12.1.1",            # only to get 3.14 build to work
    "pysbml>=0.3.0",
    "python-libsbml>=5.20.4",
    "rpds-py>=0.30.0",           # only to get 3.14 build to work
    "salib>=1.5.1",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "symbtools>=0.4.0",
    "sympy>=1.13.1",
    "tabulate>=0.9.0",
    "toml>=0.10.2",
    "tqdm>=4.66.6",
    "typing-extensions>=4.12.2",
    "wadler-lindig>=0.1.7",
]
description = "A package to build metabolic models"
keywords = ["metabolic", "modelling", "ode"]
license = "MIT"
maintainers = [
    { email = "marvin.vanaalst@gmail.com", name = "Marvin van Aalst" },
]
name = "mxlpy"
readme = "README.md"
requires-python = ">=3.12"
version = "0.37.0"

[project.optional-dependencies]
jax = [
    "diffrax>=0.7.0",
    "equinox>=0.13",
    "optax>=0.2.5",
    "sympy2jax>=0.0.7",
]
keras = [
    "keras>=3.9.2",
]
sr = [
    "pysr>=1.5.9",
]
tensorflow = [
    "tensorflow>=2.19.0",
]
torch = [
    "torch>=2.5.1",
]

[tool.bandit]
skips = ["B101", "B301", "B403", "B404", "B603", "B607"]

[tool.hatchling]
from = "src"
include = ["example_models", "mxlpy"]

[tool.hatchling.extras]
examples = ["example_models"]

[tool.pyright]
deprecateTypingAliases = true
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "tests/sbml/assets",
    "tmp",
]
include = [
    "docs",
    "src",
    "tests",
    'publication-figures',
]
pythonVersion = "3.12"
reportMissingModuleSource = "none"
strict = []

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "ANN401",  # any
    "C901",    # too complex
    "COM812",  # missing trailing comma  # "D", # all of documentation
    "D105",    # magic methods
    "D203",    # blank line before docstring
    "D213",    # multi-line summary first line
    "D401",    # first line should be in imperative mood
    "E501",    # line-too-long
    "ERA001",  # commented-out code
    "FIX001",  # line contains FIXME
    "ISC001",  # single line implicit string concat
    "N806",    # non-lowercase variable
    "N818",    # Exception should end in "Error"
    "PD010",   # pivot table
    "PGH003",  # specific rule type ignore
    "PLR0911", # too many statements
    "PLR0912", # too many branches
    "PLR0913", # max num of arguments
    "PLR0915", # too many lines
    "PT011",   # pytest.raises is too broad
    "RUF022",  # unsorted all
    "S110",    # try-except-pass
    "S301",    # pickle usage
    "TC006",   # cast("type")
    "TD001",   # invalid todo tag
    "TD002",   # missing todo author
    "TD003",   # missing todo link
    "TD004",   # missing todo version
    "TD005",   # missing todo date
    "TRY003",  # raise vanilla args
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "D",    # all of documentation
    "T201", # print statements
]
"tests/*" = [
    "D",       # all of documentation
    "PD901",   # "df" name
    "PLR2004", # magic comparisons
    "S101",    # assert
    "SLF",
]
"tmp/*" = [
    "D",    # all of documentation
    "I001", # unsorted imports
    "N",    # all of naming
    "S101", # assert
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.tomlsort]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 2
trailing_comma_inline_array = true

[tool.uv]
package = true

[tool.uv.sources]
mxlpy = { workspace = true }
